# fairo

./: .dockerignore  .flake8  .gitignore  .gitmodules  .nfs006400000bc4d66000018144  1_launch_docker_env.sh  2_launch_agent_collect.sh  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  autoformat.sh  base_agent.html  build.gradle  codecov.yml  conda.txt  controller.html  create_conda.sh  dashboard_data.db  depth0.npy  droidlet_agents.html  fmm_planner.ipynb  genindex.html  gradle.properties  grammar_spec.schema.json  hello_test.txt  index.html  launch_agent_collect.sh  launch_env.sh  launch_object_nav_habitat.sh  launch_reexplore.sh  memory.html  objects.inv  orgDepth.npy  package-lock.json  package.json  perception.html  py-modindex.html  pyproject.toml  random.txt  requirements.txt  (+5 more)
droidlet/lowlevel/minecraft/client/: .gitignore  CMakeLists.txt
droidlet/lowlevel/minecraft/client/src/: big_endian.h  block_data.h  block_map.cpp  block_map.h  blocking_queue.h  client.cpp  client.h  condition.h  craft_recipes.h  encoder.cpp  encoder.h  event.h  event_handler.cpp  event_handler.h  game_state.cpp  graphics.cpp  graphics.h  mc_agent.cpp  nbt_tag.cpp  nbt_tag.h  packet_reader.cpp  packet_reader.h  packet_writer.h  types.cpp  types.h  util.cpp
polymetis/polymetis/: CMakeLists.txt  CPPLINT.cfg  MANIFEST.in  environment.yml  install.sh  package.xml  pytest.ini  setup.py
polymetis/polymetis/conda/: build_conda_package.sh
polymetis/polymetis/conda/channel/: .gitignore
polymetis/polymetis/conda/conda_recipe/: build.sh  meta.yaml
polymetis/polymetis/conf/: default_metadata.yaml  launch_gripper.yaml  launch_psyonic_hand.yaml  launch_robot.yaml  viz.yaml
polymetis/polymetis/conf/gripper/: franka_hand.yaml  none.yaml  psyonic.yaml  robotiq_2f.yaml  spidey_hand.yaml
polymetis/polymetis/conf/new_confs/: new_launch_hw.yaml  new_launch_sim.yaml
polymetis/polymetis/conf/new_confs/env/: franka.yaml  franka_with_robotiq.yaml
polymetis/polymetis/conf/robot_client/: allegro_hardware.yaml  allegro_sim.yaml  bullet_sim.yaml  empty_statistics_client.yaml  franka_hardware.yaml  franka_mujoco_sim.yaml  franka_robotiq_85_mujoco_sim.yaml  franka_sim.yaml  habitat_sim.yaml  kuka_sim.yaml  mujoco_sim.yaml  none.yaml
polymetis/polymetis/conf/robot_model/: ability_hand.yaml  allegro_hand.yaml  franka_panda.yaml  franka_panda_robotiq_85.yaml  franka_panda_with_hand.yaml  kuka_iiwa.yaml
polymetis/polymetis/data/: franka_panda_with_2f_85_gripper.urdf
polymetis/polymetis/data/ability_hand/: ability_hand.urdf
polymetis/polymetis/data/ability_hand/meshes/: FB_palm_ref.STL  idx-F1.STL  idx-F2.STL  thumb-F1.STL  thumb-F2.STL
polymetis/polymetis/data/allegro_hand/: README.md  allegro_hand_description_left.urdf  allegro_hand_description_left.xacro  allegro_hand_description_right.urdf  allegro_hand_description_right.xacro  endeffector-allegro.json
polymetis/polymetis/data/allegro_hand/meshes/: link_3.0_tip.STL
polymetis/polymetis/data/franka_ability/: franka_ability.urdf
polymetis/polymetis/data/franka_panda/: panda_arm.mjcf  panda_arm.urdf  panda_arm_hand.urdf
polymetis/polymetis/data/franka_panda_robotiq_85/: panda_robotiq_85.mjcf  panda_robotiq_85.urdf
polymetis/polymetis/data/franka_panda_robotiq_85/meshes/: collision  robotiq-2f  visual
polymetis/polymetis/data/kuka_iiwa/: README.md  generate_urdf.sh
polymetis/polymetis/data/kuka_iiwa/launch/: iiwa14_upload.launch  iiwa7_upload.launch
polymetis/polymetis/data/kuka_iiwa/urdf/: box.urdf  hole_box.urdf  hole_box_huge.urdf  hole_box_large.urdf  iiwa7.urdf  (+10 more)
polymetis/polymetis/data/robotiq_2f_85_gripper/: README.md
polymetis/polymetis/include/: dtt.h  real_time.hpp
polymetis/polymetis/include/polymetis/: controller_manager.hpp  polymetis_server.hpp  polymetis_server2.hpp  polymetis_server_old.hpp  utils.h
polymetis/polymetis/pinocchio_isolation/: CMakeLists.txt
polymetis/polymetis/pinocchio_isolation/src/: pinocchio_wrapper.cpp
polymetis/polymetis/protos/: polymetis.fbs  polymetis.proto
polymetis/polymetis/python/polymetis/: __init__.py  _version.py  base_interface.py  gripper_interface.py  robot_interface.py
polymetis/polymetis/python/polymetis_pb2/: __init__.py  polymetis_pb2.py
polymetis/polymetis/python/polymetis_pb2_grpc/: __init__.py  polymetis_pb2_grpc.py
polymetis/polymetis/python/polysim/: __init__.py  grpc_sim_client.py  pybullet_server.py  sim_interface.py  test_utils.py
polymetis/polymetis/python/scripts/: benchmark_control_latency.py  benchmark_ee_tracking.py  last_state_timestep.py  launch_gripper.py  launch_psyonic_hand.py  launch_robot.py  persist_server.sh  ping_server.py  viz.py
polymetis/polymetis/python/torchcontrol/: README.md  __init__.py  _module.py
polymetis/polymetis/src/: controller_manager.cpp  franka_gripper_server.cpp  polymetis_server.cpp  run_server.cpp
polymetis/polymetis/src/clients/: empty_statistics_client.cpp  test_grpc_client.cpp
polymetis/polymetis/src/torchscript_operators/: pinocchio.cpp  rotations.cpp  torch_server_ops.cpp
polymetis/polymetis/tests/: test_libfranka_installation.sh
polymetis/polymetis/tests/cpp/: test_allegro_hand_client.cpp  test_server.cpp  test_server.py  test_server.yaml
polymetis/polymetis/tests/data/: module_feedback_cpd.pt  module_feedback_jpd.pt  module_feedback_lf.pt  module_feedback_opd.pt  module_feedback_oppd.pt  module_feedback_ppd.pt  module_feedforward_coriolis.pt  module_feedforward_id_0.pt  module_feedforward_id_1.pt  module_planning_cartesian_2.pt  module_planning_cartesian_25.pt  module_planning_cartesian_joints_2.pt  module_planning_cartesian_joints_25.pt  module_planning_joints_2.pt  module_planning_joints_25.pt  module_planning_pos_2.pt  module_planning_pos_25.pt
polymetis/polymetis/torch_isolation/: CMakeLists.txt
polymetis/polymetis/torch_isolation/include/: dtt.h  pinocchio_wrapper.hpp  rotations.hpp  torch_server_ops.hpp
polymetis/polymetis/torch_isolation/pinocchio_isolation/: CMakeLists.txt
polymetis/polymetis/torch_isolation/src/: pinocchio.cpp  pinocchio_wrapper.cpp  rotations.cpp  torch_server_ops.cpp
(+7701 files in other folders)
